[package]
name = "shortcut"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
freedesktop_entry_parser = { version = "1.3.0" }
anyhow = "1.0.75"
ashpd = "0.8.1"

[build-dependencies]
glib-build-tools = "0.18.0"
