[package]
name = "shortcut"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
freedesktop_entry_parser = { version = "1.3.0" }
anyhow = "1.0.75"
ashpd = {version = "0.8.1", features = ["gtk4"] }

[build-dependencies]
glib-build-tools = "0.18.0"
