[package]
name = "shortcut"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
freedesktop_entry_parser = { version = "1.3.0" }
anyhow = "1.0.75"

[build-dependencies]
glib-build-tools = "0.18.0"
